# django-juss2

./: MANIFEST.in  README.md  README.org  README.rst  setup.cfg
juss/: __init__.py  admin.py  apis.py  apps.py  forms.py  middlewares.py  models.py  serializers.py  tests.py  urls.py  views.py  widgets.py
juss/management/commands/: create_menus.py
juss/migrations/: 0001_initial.py  0002_rename_model_menu_content_type.py
juss/static/juss/: _light.scss  _table.scss  app.css  base.css  base.css.map  base.scss  index.js.map  juss.js
juss/templates/admin/: actions.html  base.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  login.html  login_default.html  mptt_change_list_results.html  object_history.html  pagination.html  search_form.html  submit_line.html
juss/templates/admin/edit_inline/: stacked.html  tabular.html
juss/templates/admin/includes/: fieldset.html
juss/templates/admin/widgets/: clearable_file_input.html  clearable_image_input.html  (+3 more)
juss/templates/admin_doc/: bookmarklets.html  index.html  model_detail.html  model_index.html  template_filter_index.html  template_tag_index.html  view_detail.html  view_index.html
juss/templates/juss/: form_snippet.html  juss_menus.html  left_menu.html  left_panel.html  login2.html  logout.html  navbar.html  password_change.html  setting.html
juss/templates/registration/: password_change_form.html
juss/templatetags/: juss_admin_list.py  juss_menus.py
(+6 files in other folders)
